--- a/HOAmanager/src/main/resources/application.properties
+++ b/HOAmanager/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/classicmodels
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://hoa.c4gj0xxhp0g9.ap-southeast-2.rds.amazonaws.com:3306/HOADB
+spring.datasource.username=kalabaw
 
 
 
@@ -66,5 +66,5 @@ spring.datasource.username=root
 
 
 
-spring.datasource.password=shuan2020schaylerlove
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
