Add asset activity and inserting new assets

--- a/HOAmanager/src/main/resources/application.properties
+++ b/HOAmanager/src/main/resources/application.properties
@@ -66,5 +66,5 @@ spring.datasource.username=kalabaw
 
 
 
-spring.datasource.password=12345678
+spring.datasource.password=k4lab4wg0dZ?!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
